# wwid-port

./: .cursorignore  .gitignore  BASELINE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVLOG.md  LICENSE  NOTICE  README.md  justfile  parity-notes.md
.github/workflows/: deploy.yml  test.yml
docs/: API_SHAPE.md  ARCHITECTURE.md  FEATURE_MATRIX.md  FIXTURE_PLAN.md  PORT_SPEC.md
docs/user-guide/: getting-started.md  index.md  sample-files.md  settings.md  using-widesigner.md
docs/user-guide/optimizers/: constraints.md  naf.md  overview.md  reed.md  whistle-flute.md  workflow.md
docs/user-guide/reference/: bibliography.md  differences-from-java.md  glossary.md  modelling-instruments.md  naf-design.md  reed-didgeridoos.md  tuning-winds.md
docs/user-guide/study-models/: flute.md  naf.md  reed.md  whistle.md
docs/user-guide/tools/: evaluation.md  note-spectrum.md  sketch-and-compare.md  supplementary.md  tuning-wizard.md
golden-harness/: README.md  build.gradle  settings.gradle
golden/expected/BOBYQA-REF/: reference_results.json
golden/expected/CMP-NAF/: compare.json
golden/expected/CONSTRAINTS-01/: constraints_0.json  constraints_0.xml
golden/expected/DIRECT-01/: global_hole.json  global_hole_position.json
golden/expected/FL-CAL/: calib_airstream_length.json  calib_beta.json  calib_joint.json
golden/expected/FL-HEADJOINT-01/: optimize_0.json
golden/expected/FL-MERGED-01/: optimize_0.json
golden/expected/FL-MERGED-02/: optimize_0.json
golden/expected/FL-MERGED-03/: optimize_0.json
golden/expected/FL-MERGED-04/: optimize_0.json
golden/expected/FL-OPT/: opt_hole.json  opt_hole_position.json  opt_hole_size.json
golden/expected/FL-STOPPER-01/: optimize_0.json
golden/expected/FL-TAPER-01/: optimize_0.json
golden/expected/FL-ZSAMPLE/: z_samples.json
golden/expected/FLUTE-BULK-EVAL/: all_evals.json
golden/expected/GRAPH-WH/: graph_tuning.json
golden/expected/NAF-BULK-EVAL/: all_evals.json
golden/expected/NAF-FF-01/: eval_0.json  eval_1.json  eval_2.json  eval_3.json  internals_0.json  zsample_0.json  zsample_1.json
golden/expected/NAF-FF-02/: calibrate_0.json  eval_0.json  eval_1.json
golden/expected/NAF-FF-03/: calibrate_0.json  eval_0.json
golden/expected/NAF-GRP-01/: eval_1.json  instrument_after_optimize_0.xml  optimize_0.json
golden/expected/NAF-OPT-01/: eval_1.json  instrument_after_optimize_0.xml  optimize_0.json
golden/expected/NAF-OPT-02/: eval_0.json  instrument_after_optimize_0.xml  optimize_0.json
golden/expected/NAF-TPR-01/: eval_1.json  instrument_after_optimize_0.xml  optimize_0.json
golden/expected/RD-BORE-01/: optimize_0.json
golden/expected/RD-BORE-02/: optimize_0.json
golden/expected/RD-BORE-03/: optimize_0.json
golden/expected/RD-BULK-EVAL/: all_evals.json
golden/expected/RD-CAL/: calib_joint.json
golden/expected/RD-MERGED-01/: optimize_0.json
golden/expected/RD-MERGED-02/: optimize_0.json
golden/expected/RD-MERGED-03/: optimize_0.json
golden/expected/RD-OPT-01/: optimize_0.json
golden/scenarios/: CONSTRAINTS-01.json  CONSTRAINTS-02.json  NAF-FF-01.json  NAF-FF-02.json  NAF-FF-03.json  NAF-GRP-01.json  NAF-OPT-01.json  NAF-OPT-02.json  NAF-TPR-01.json  RD-BORE-01.json  WH-BORE-01.json  WH-BORE-02.json
money-experiment/: delivery.md  earn.mjs.gz.b64  trigger-2.txt
tools/: fetch-oracle.sh  import-reference.mjs
web/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx  wasm.d.ts
web/src/stores/: reference.ts  (+1 more)
wid/: ARCHITECTURE.md  Cargo.toml  README.md  TESTING.md
wid/crates/bobyqa/: Cargo.toml  README.md
wid/crates/bobyqa/src/: lib.rs
wid/crates/direct/: Cargo.toml  README.md
wid/crates/direct/src/: lib.rs
wid/crates/wid-acoustics/: Cargo.toml  README.md
wid/crates/wid-acoustics/src/: bore.rs  hole.rs  lib.rs  mouthpiece.rs  simple_fipple.rs  simple_reed.rs  termination.rs  tube.rs
wid/crates/wid-compile/: Cargo.toml  README.md
wid/crates/wid-compile/src/: lib.rs
wid/crates/wid-eval/: Cargo.toml  README.md
wid/crates/wid-eval/src/: brent.rs  calculator_params.rs  evaluators.rs  lib.rs  linear_v.rs
wid/crates/wid-eval/tests/: bulk_flute_eval.rs  bulk_naf_eval.rs  bulk_reed_eval.rs  bulk_whistle_eval.rs  flute_z_sample.rs  reed_z_sample.rs  whistle_z_sample.rs
wid/crates/wid-math/: Cargo.toml  README.md
wid/crates/wid-math/src/: lib.rs
wid/crates/wid-optimize/: Cargo.toml  README.md
wid/crates/wid-optimize/src/: airstream_length.rs  beta.rs  bobyqa.rs  bore.rs  brent_min.rs  fipple.rs  flute_calib.rs  global_optimize.rs  hole_combined.rs  hole_from_top.rs  hole_group_from_top.rs  hole_position.rs  hole_size.rs  lib.rs  multi_start.rs  reed_calib.rs  single_taper.rs  whistle_calib.rs  window_height.rs
wid/crates/wid-physics/: Cargo.toml  README.md
wid/crates/wid-physics/src/: lib.rs
wid/crates/wid-session/: Cargo.toml  README.md
wid/crates/wid-session/src/: doc_store.rs  flute.rs  lib.rs  naf.rs  reed.rs  types.rs  whistle.rs
wid/crates/wid-types/: Cargo.toml  README.md
wid/crates/wid-types/src/: constraints.rs  instrument.rs  lib.rs  tuning.rs  wizard.rs
wid/crates/wid-wasm/: Cargo.toml
wid/crates/wid-wasm/src/: lib.rs
wid/examples/: reed_debug.rs
(+110 files in other folders)
