[workspace]
resolver = "2"
members = [
    "crates/wid-math",
    "crates/wid-physics",
    "crates/wid-types",
    "crates/wid-compile",
    "crates/wid-acoustics",
    "crates/wid-eval",
    "crates/bobyqa",
    "crates/direct",
    "crates/wid-optimize",
    "crates/wid-session",
    "crates/wid-wasm",
]

[workspace.dependencies]
num-complex = "0.4"
approx = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.37", features = ["serde", "serialize"] }
wasm-bindgen = "=0.2.100"
js-sys = "=0.3.77"
