[package]
name = "wid-wasm"
version = "0.1.0"
edition = "2024"
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wid-session = { path = "../wid-session" }
wid-types = { path = "../wid-types" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde_json = { workspace = true }
serde = { workspace = true }
